Add style for headings and logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html">
-            Love Running
+            <h1 id="logo">Love Running</h1>
         </a>
         <nav>
             <ul>
