--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running (but why?)">
-    <meta name="keywords" content="love running, running club, dublin, south dakota">
+    <meta name="description" content="Love Running">
+    <meta name="keywords" content="love running, running club, dublin, ireland">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
@@ -37,8 +37,38 @@
     </section>
     <section id="club-ethos">
         <h1>Why Love Running With Us?</h1>
-        <div id="left-about">Left</div>
-        <div id="right-about">Right</div>
+        <div id="left-about">
+            <div class="left-about-heading">
+                <h2>Feel Healthy</h2>
+                <hr>
+                <p>
+                    Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health.  Plus, it burns calories and can build strength.
+                </p>
+            </div>
+            <div class="left-about-heading">
+                <h2>Feel Free</h2>
+                <hr>
+                <p>
+                    Physical exercise, running included, is known to release endorphins in the brain.  Endorphins make you more energetic, more awake and, yes, happier.
+                </p>
+            </div>
+        </div>
+        <div id="right-about">
+            <div class="right-about-heading">
+                <h2>Get Social</h2>
+                <hr>
+                <p>
+                    When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events.
+                </p>
+            </div>
+            <div class="right-about-heading">
+                <h2>Feel Strong</h2>
+                <hr>
+                <p>
+                    Running strengthens your heart by pumping blood more effectively through your body.
+                </p>
+            </div>
+        </div>
         <div id="center-about">Center</div>
     </section>
     <section>
