--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li><a href="https://facebook.com" target="_blank" rel="noopener" 
                 aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://twitter.com" target="_blank" rel="noopener" 
@@ -126,9 +126,6 @@
                 aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
-    1
-Add Your Kit's Code to a Project
-
 <script src="https://kit.fontawesome.com/a8eff56f0b.js" crossorigin="anonymous"></script>
 </body>
 
